Change home screen

--- a/tailwind.css
+++ b/tailwind.css
@@ -9,8 +9,8 @@
         font-family: 'Fjalla One';
     }
 
-    .font-inter {
-        font-family: Inter;
+    .font-roboto {
+        font-family: Roboto;
     }
 
     .text-accent {
